--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jasmine": "^2.6.0",
     "karma": "^1.7.0",
     "node": "^6.9.5",
-    "nyc": "^11.0.2"
+    "nyc": "^11.0.2",
+    "xml2js": "^0.4.17"
   }
 }
